# obsidian_claude_remote

./: .gitignore  CLAUDE.md  COMMENTS_FOR_BEPY.md  DISCONTINUED.md  README.md  build.py  config.py  launcher.py  main.py  picker.py  pyproject.toml  requirements.txt  startup.py  tray.py  vault_detector.py
.claude/skills/deploy/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: build-release.yml
.portfolio-data/: PORTFOLIO.md  metadata.json
scripts/: _pyinstaller_entry.py  build.py  generate_icon.py  smoke_test.py  write_version.py
src/obsidian_claude_remote/: __main__.py  config.py  launcher.py  logger.py  picker.py  startup.py  tray.py  vault_detector.py
src/obsidian_claude_remote/ui/: blank.html  picker.html
