[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian_claude_remote"
version = "0.1.0"
description = "Windows tray app that auto-launches Claude Code with --remote-control inside an Obsidian vault."
requires-python = ">=3.10"
dependencies = [
    "pystray",
    "Pillow",
    "psutil",
    "pywin32; sys_platform == 'win32'",
]

[project.scripts]
obsidian_claude_remote = "obsidian_claude_remote.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
